test/parser/valid/types/boolean.java
protected class A {
  public A() {}
  protected boolean x;
}

