test/parser/bad/types/long.java
protected class A {
  protected long x;
}

